--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,21 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
-    "react-router-dom": "^7.0.2",
-    "react-sketch-canvas": "^6.2.0"
+    "react-router-dom": "^7.1.0",
+    "react-sketch-canvas": "^6.2.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
