--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -26,7 +26,7 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY ./models /app/models
 COPY . /app
 
-# Contatiner status checker : Job schedular
+# Container status checker : Job scheduler
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/ || exit 1
 
