--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,11 +73,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build and test docker-compose
+    # Docker Compose V2
+    - name: Build and test docker compose
       run: |
-        docker-compose build
-        docker-compose up -d
-        docker-compose ps
+        docker compose build
+        docker compose up -d
+        docker compose ps
         sleep 10
         curl -f http://localhost:8000/
-        docker-compose down
+        docker compose down
