--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '0.0.4'
 services:
   frontend:
     build:
@@ -6,18 +6,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5173:5173"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     environment:
       - NODE_ENV=development
       - VITE_API_URL=http://localhost:8000
     healthcheck:
       disable: true
     command: npm run dev -- --host 0.0.0.0
-    depends_on:
-      backend:
-        condition: service_healthy
 
   backend:
     build:
@@ -25,19 +19,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./app:/app
-      - ./app/models:/app/models
-      - ./app/temp:/app/temp
     environment:
       - HOUSE_MODEL_PATH=/app/models/house_model.pt
       - TREE_MODEL_PATH=/app/models/tree_model.pt
       - PERSON_MODEL_PATH=/app/models/person_model.pt
       - DATABASE_URL=sqlite:///htp_project.db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
-      interval: 30s
-      timeout: 30s
-      retries: 3
-      start_period: 5s
-    restart: always
+      test: ["CMD", "curl", "-f", "http://localhost:8000/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
