--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,6 +14,7 @@ openai = "^1.58.1"
 uvicorn = "^0.34.0"
 ultralytics = "^8.3.55"
 numpy = "^1.26.4"
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
