--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.34.0"
 ultralytics = "^8.3.55"
 numpy = "^1.26.4"
 python-multipart = "^0.0.20"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
