--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,3 +1,15 @@
+[project]
+name = "backend-gorani-side-project"
+version = "0.1.0"
+description = "Backend Gorani Side Project"
+authors = [
+    {name = "Taehan Kim", email = "taehan5479@gmail.com"},
+    {name = "Namgyu-Youn", email = "yynk2012@gmail.com"}
+]
+license = {text = "MIT"}
+readme = "README.md"
+requires-python = "^3.9"
+
 [tool.poetry]
 name = "backend-gorani-side-project"
 version = "0.1.0"
@@ -6,8 +18,6 @@ authors = [
     "Taehan Kim <taehan5479@gmail.com>",
     "Namgyu-Youn <yynk2012@gmail.com>"
 ]
-license = "MIT"
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -30,5 +40,5 @@ url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
