--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,18 +1,20 @@
-FROM python:3.12.3 as requirements-stage
+FROM python:3.9 as requirements-stage
 
 WORKDIR /tmp
 
 # Poetry 설치 및 설정
-RUN pip install poetry==1.7.1 && \
-    poetry config virtualenvs.create false
+RUN pip install --no-cache-dir poetry==1.7.1 && \
+    poetry config virtualenvs.create false && \
+    poetry config installer.max-workers 10
 
 COPY ./pyproject.toml ./poetry.lock* /tmp/
 
 # requirements.txt 생성
-RUN python -m poetry install --no-interaction --no-root && \
+RUN pip install --no-cache-dir torch==2.0.0 && \
+    python -m poetry install --no-interaction --no-root && \
     python -m poetry export --format requirements.txt --output requirements.txt --without-hashes
 
-FROM python:3.12.3-slim
+FROM python:3.9-slim
 
 WORKDIR /app
 
