--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -25,10 +25,10 @@ fastapi = "^0.105.0"
 sqlalchemy = "^2.0.36"
 openai = "^1.58.1"
 uvicorn = "^0.34.0"
-ultralytics = {version = "^8.3.55", extras = ["cpu"]}
+ultralytics = {version = "^8.3.54", extras = ["cpu"]}
 numpy = "^1.26.4"
 python-multipart = "^0.0.7"
-torch = {version = "^2.0.0", source = "pytorch", extras = ["cpu"]}
+torch = "2.0.0"
 python-dotenv = "*"
 
 [tool.poetry.group.dev.dependencies]
