--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,47 +1,62 @@
-# Stage 1: Requirements
-FROM python:3.9-slim as requirements-stage
+# Use slim variant for smaller base image
+FROM python:3.12.3-slim
 
-WORKDIR /tmp
-
-# Install build dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Poetry
-RUN pip install --no-cache-dir poetry==1.7.1 && \
-    poetry config virtualenvs.create false
-
-# Copy dependency files
-COPY ./pyproject.toml ./poetry.lock* /tmp/
-
-# Install dependencies and export requirements
-RUN poetry config installer.max-workers 10 && \
-    poetry install --no-interaction --no-root && \
-    poetry export --format requirements.txt --output requirements.txt --without-hashes
-
-# Stage 2: Final image
-FROM python:3.9-slim
-
+# Set working directory
 WORKDIR /app
 
-# Build initial setup
-RUN apt-get update && apt-get install -y \
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PORT=8000 \
+    # Prevents Python from writing .pyc files
+    PYTHONUNBUFFERED=1 \
+    # Prevents pip from caching downloaded packages
+    PIP_NO_CACHE_DIR=1 \
+    # Disables the pip version check
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     libgl1-mesa-glx \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    build-essential \
+    && rm -rf /var/lib/apt/lists/* && \
+    # Create non-root user for security
+    adduser --disabled-password --gecos "" appuser
 
-# Install system package
-COPY --from=requirements-stage /tmp/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy only the necessary files first
+COPY ./models ./models
+COPY ./main.py ./api.py ./config.py ./database.py ./dependencies.py ./
 
-COPY ./models /app/models
-COPY . /app
+# Install Python packages
+# Organized by functionality for better maintainability
+RUN pip install --no-cache-dir \
+    # Web framework and related
+    "fastapi>=0.105.0" \
+    "uvicorn[standard]>=0.34.0" \
+    "python-multipart>=0.0.7" \
+    # Database
+    "sqlalchemy>=2.0.36" \
+    # HTTP client
+    "requests>=2.32.3" \
+    # ML/DL related
+    "ultralytics[cpu]>=8.3.54" \
+    "numpy>=1.26.4" \
+    --extra-index-url https://download.pytorch.org/whl/cpu \
+    "torch>=2.0.0" \
+    # Utilities
+    "python-dotenv>=1.0.0" && \
+    # Change ownership of the app directory
+    chown -R appuser:appuser /app
 
-# Container status checker : Job scheduler
+# Switch to non-root user
+USER appuser
+
+# Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/ || exit 1
 
+# Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
