--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@ dist
 build
 egg-info
 
-# IDE and Editor files
-.idea
-.cache
-
 # Virtual environment files
 venv
 .venv
@@ -46,8 +42,9 @@ key.json
 .secrets
 *.key
 
-# Poetry
-poetry.lock
-
 # React
 frontend/node_modules
+
+# Ruff
+.ruff_cache
+.ollama
